tests/baselines/reference/ambientModuleWithImportAttributesDiagnostics.errors.txt
test.ts(2,21): error TS18063: No ambient module declaration matches import of 'styles.css' with the specified import attributes.
test.ts(5,21): error TS18063: No ambient module declaration matches import of 'styles2.css' with the specified import attributes.
test.ts(8,18): error TS18063: No ambient module declaration matches import of 'file.txt' with the specified import attributes.
test.ts(11,18): error TS18063: No ambient module declaration matches import of 'data.json' with the specified import attributes.


==== types.d.ts (0 errors) ====
    // Declare ambient modules with import attributes
    declare module "*.css" with { type: "css" } {
        const stylesheet: CSSStyleSheet;
        export default stylesheet;
    }
    
    declare module "*.json" with { type: "json" } {
        const data: any;
        export default data;
    }
    
    declare module "*.txt" {
        const content: string;
        export default content;
    }
    
==== test.ts (4 errors) ====
    // Should error - pattern matches but attributes don't match
    import styles1 from "styles.css" with { type: "style" };
                        ~~~~~~~~~~~~
!!! error TS18063: No ambient module declaration matches import of 'styles.css' with the specified import attributes.
    
    // Should error - pattern matches but import has no attributes when declaration requires them
    import styles2 from "styles2.css";
                        ~~~~~~~~~~~~~
!!! error TS18063: No ambient module declaration matches import of 'styles2.css' with the specified import attributes.
    
    // Should error - pattern matches but import has attributes when declaration doesn't
    import text from "file.txt" with { type: "text" };
                     ~~~~~~~~~~
!!! error TS18063: No ambient module declaration matches import of 'file.txt' with the specified import attributes.
    
    // Should error - pattern matches but attribute value is wrong
    import data from "data.json" with { type: "data" };
                     ~~~~~~~~~~~
!!! error TS18063: No ambient module declaration matches import of 'data.json' with the specified import attributes.
    
    